# Copyright (c) 2026 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../../../webrtc.gni")

rtc_source_set("video_jitter_timing_interface") {
  visibility = [ "*" ]
  sources = [ "video_jitter_timing_interface.h" ]
  deps = [
    "../../environment",
    "../../units:data_size",
    "../../units:time_delta",
    "../../units:timestamp",
  ]
}

rtc_source_set("video_jitter_timing_factory") {
  visibility = [ "*" ]
  sources = [ "video_jitter_timing_factory.h" ]

  deps = [
    ":video_jitter_timing_interface",
    "../../environment",
  ]
}
